--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,5 +34,9 @@ section#telefone {
 }
 
 iframe#tela {
-    
+    position: relative;
+    top: 80px;
+    left: 23px;
+    width: 269px;
+    height: 471px;
 }
